Revise the content.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Travel website",
+  "name": "travel-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,5 +11,25 @@
   "devDependencies": {
     "prettier": "^3.3.1",
     "vite": "^5.1.6"
-  }
+  },
+  "main": "index.js",
+  "dependencies": {
+    "esbuild": "^0.21.5",
+    "nanoid": "^3.3.11",
+    "picocolors": "^1.1.1",
+    "postcss": "^8.5.3",
+    "rollup": "^4.40.0",
+    "source-map-js": "^1.2.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tanqianwan/webstorm_test.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tanqianwan/webstorm_test/issues"
+  },
+  "homepage": "https://github.com/tanqianwan/webstorm_test#readme",
+  "description": ""
 }
