The first revision.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "gulp": "^5.0.0",
     "prettier": "^3.3.1",
     "vite": "^5.1.6"
   }
